# resources/model_upload_profile_media_links_data_attributes_avatar.go
@@ -1,0 +1,217 @@
+/*
+NetBill profile service
+
+profile-svc docs
+
+API version: 0.1.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package resources
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the UploadProfileMediaLinksDataAttributesAvatar type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &UploadProfileMediaLinksDataAttributesAvatar{}
+
+// UploadProfileMediaLinksDataAttributesAvatar struct for UploadProfileMediaLinksDataAttributesAvatar
+type UploadProfileMediaLinksDataAttributesAvatar struct {
+	// Key for the avatar in the storage service
+	Key string `json:"key"`
+	// Pre-signed URL for uploading the avatar
+	UploadUrl string `json:"upload_url"`
+	// URL for preloading the avatar after upload
+	PreloadUrl string `json:"preload_url"`
+}
+
+type _UploadProfileMediaLinksDataAttributesAvatar UploadProfileMediaLinksDataAttributesAvatar
+
+// NewUploadProfileMediaLinksDataAttributesAvatar instantiates a new UploadProfileMediaLinksDataAttributesAvatar object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewUploadProfileMediaLinksDataAttributesAvatar(key string, uploadUrl string, preloadUrl string) *UploadProfileMediaLinksDataAttributesAvatar {
+	this := UploadProfileMediaLinksDataAttributesAvatar{}
+	this.Key = key
+	this.UploadUrl = uploadUrl
+	this.PreloadUrl = preloadUrl
+	return &this
+}
+
+// NewUploadProfileMediaLinksDataAttributesAvatarWithDefaults instantiates a new UploadProfileMediaLinksDataAttributesAvatar object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewUploadProfileMediaLinksDataAttributesAvatarWithDefaults() *UploadProfileMediaLinksDataAttributesAvatar {
+	this := UploadProfileMediaLinksDataAttributesAvatar{}
+	return &this
+}
+
+// GetKey returns the Key field value
+func (o *UploadProfileMediaLinksDataAttributesAvatar) GetKey() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Key
+}
+
+// GetKeyOk returns a tuple with the Key field value
+// and a boolean to check if the value has been set.
+func (o *UploadProfileMediaLinksDataAttributesAvatar) GetKeyOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Key, true
+}
+
+// SetKey sets field value
+func (o *UploadProfileMediaLinksDataAttributesAvatar) SetKey(v string) {
+	o.Key = v
+}
+
+// GetUploadUrl returns the UploadUrl field value
+func (o *UploadProfileMediaLinksDataAttributesAvatar) GetUploadUrl() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.UploadUrl
+}
+
+// GetUploadUrlOk returns a tuple with the UploadUrl field value
+// and a boolean to check if the value has been set.
+func (o *UploadProfileMediaLinksDataAttributesAvatar) GetUploadUrlOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.UploadUrl, true
+}
+
+// SetUploadUrl sets field value
+func (o *UploadProfileMediaLinksDataAttributesAvatar) SetUploadUrl(v string) {
+	o.UploadUrl = v
+}
+
+// GetPreloadUrl returns the PreloadUrl field value
+func (o *UploadProfileMediaLinksDataAttributesAvatar) GetPreloadUrl() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.PreloadUrl
+}
+
+// GetPreloadUrlOk returns a tuple with the PreloadUrl field value
+// and a boolean to check if the value has been set.
+func (o *UploadProfileMediaLinksDataAttributesAvatar) GetPreloadUrlOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.PreloadUrl, true
+}
+
+// SetPreloadUrl sets field value
+func (o *UploadProfileMediaLinksDataAttributesAvatar) SetPreloadUrl(v string) {
+	o.PreloadUrl = v
+}
+
+func (o UploadProfileMediaLinksDataAttributesAvatar) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o UploadProfileMediaLinksDataAttributesAvatar) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["key"] = o.Key
+	toSerialize["upload_url"] = o.UploadUrl
+	toSerialize["preload_url"] = o.PreloadUrl
+	return toSerialize, nil
+}
+
+func (o *UploadProfileMediaLinksDataAttributesAvatar) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"key",
+		"upload_url",
+		"preload_url",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varUploadProfileMediaLinksDataAttributesAvatar := _UploadProfileMediaLinksDataAttributesAvatar{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varUploadProfileMediaLinksDataAttributesAvatar)
+
+	if err != nil {
+		return err
+	}
+
+	*o = UploadProfileMediaLinksDataAttributesAvatar(varUploadProfileMediaLinksDataAttributesAvatar)
+
+	return err
+}
+
+type NullableUploadProfileMediaLinksDataAttributesAvatar struct {
+	value *UploadProfileMediaLinksDataAttributesAvatar
+	isSet bool
+}
+
+func (v NullableUploadProfileMediaLinksDataAttributesAvatar) Get() *UploadProfileMediaLinksDataAttributesAvatar {
+	return v.value
+}
+
+func (v *NullableUploadProfileMediaLinksDataAttributesAvatar) Set(val *UploadProfileMediaLinksDataAttributesAvatar) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableUploadProfileMediaLinksDataAttributesAvatar) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableUploadProfileMediaLinksDataAttributesAvatar) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableUploadProfileMediaLinksDataAttributesAvatar(val *UploadProfileMediaLinksDataAttributesAvatar) *NullableUploadProfileMediaLinksDataAttributesAvatar {
+	return &NullableUploadProfileMediaLinksDataAttributesAvatar{value: val, isSet: true}
+}
+
+func (v NullableUploadProfileMediaLinksDataAttributesAvatar) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableUploadProfileMediaLinksDataAttributesAvatar) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
